--- a/src/components/Modal/modal.module.scss
+++ b/src/components/Modal/modal.module.scss
@@ -122,6 +122,7 @@
   margin-top: 15px;
 
   input {
+    width: 100%;
     margin-left: 5px;
   }
 }
@@ -133,7 +134,7 @@
   height: 50px;
   font-size: 17px;
   color: colors.$WHITE;
-  background: colors.$LIGHTGRAY;
+  background: colors.$GRAY_100;
   border-radius: 20px;
   transition: 0.2s linear;
 
