--- a/src/styles/constants/_colors.scss
+++ b/src/styles/constants/_colors.scss
@@ -5,4 +5,5 @@ $BLACK: #000000;
 $KEY: #ffb547;
 $LIGHTORANGE: #fbc5a7;
 $LIGHTPINK: #fff1e9;
-$LIGHTGRAY: #d9d9d9;
+$GRAY_100: #d9d9d9;
+$GRAY_300: #b3b2b2;
