--- a/src/components/Modal/modal.module.scss
+++ b/src/components/Modal/modal.module.scss
@@ -1,6 +1,20 @@
 @use '../../styles/constants/colors';
 
+.background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 90;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 30%);
+}
+
 .modalContainer {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  z-index: 100;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -8,8 +22,8 @@
   height: 500px;
   font-weight: 500;
   background: colors.$WHITE;
-  border: 1px solid colors.$BLACK;
   border-radius: 10px;
+  transform: translate(-50%, -50%);
 }
 
 .modalBox {
