--- a/src/routes/MakeTodo/makeTodo.module.scss
+++ b/src/routes/MakeTodo/makeTodo.module.scss
@@ -34,7 +34,8 @@
   align-items: center;
   justify-content: space-between;
   width: calc(100% - 30px);
-  height: 50px;
+  height: 40px;
+  margin-top: 10px;
   font-size: 20px;
   font-weight: 500;
 
