--- a/src/components/Modal/modal.module.scss
+++ b/src/components/Modal/modal.module.scss
@@ -15,21 +15,13 @@
   top: 50%;
   left: 50%;
   z-index: 100;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   width: 320px;
   height: 500px;
+  padding: 10px 20px;
   font-weight: 500;
   background: colors.$WHITE;
   border-radius: 10px;
   transform: translate(-50%, -50%);
-}
-
-.modalBox {
-  position: relative;
-  width: 290px;
-  height: 100%;
 }
 
 .modalHead {
@@ -44,9 +36,20 @@
   }
 }
 
+.error {
+  margin-left: 5px;
+  font-size: 13px;
+  color: colors.$ERROR;
+}
+
 .title {
   width: 260px;
   font-size: 17px;
+
+  .titleHead {
+    display: flex;
+    align-items: center;
+  }
 
   input {
     width: 100%;
@@ -58,6 +61,10 @@
 
 .category {
   margin-top: 25px;
+
+  .categoryHead {
+    display: flex;
+  }
 
   .categoryForm {
     display: flex;
