--- a/src/routes/MakeTodo/SearchInput/searchInput.module.scss
+++ b/src/routes/MakeTodo/SearchInput/searchInput.module.scss
@@ -1,21 +1,48 @@
 @use '../../../styles/constants/colors';
 
-.searchForm {
-  position: relative;
-
-  .searchIcon {
-    position: absolute;
-    top: 15px;
-    left: 10px;
-    width: 15px;
-    height: 15px;
-  }
+.inputBox {
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  margin: 15px 30px;
 }
 
-.input {
+.searchForm {
+  position: relative;
+}
+
+.searchIcon {
+  position: absolute;
+  top: 15px;
+  left: 10px;
+  width: 15px;
+  height: 15px;
+}
+
+.searchInput {
   width: 340px;
   height: 44px;
   padding-left: 35px;
   background: colors.$LIGHTPINK;
   border-radius: 15px;
+}
+
+.dropdownList {
+  position: relative;
+  z-index: 50;
+  width: 100%;
+  height: auto;
+  padding: 15px 35px 10px;
+  margin-top: 5px;
+  background: colors.$LIGHTPINK;
+  border-radius: 10px;
+
+  li {
+    margin-bottom: 10px;
+
+    button {
+      width: 100%;
+      text-align: left;
+    }
+  }
 }
