--- a/src/routes/MakeTodo/SearchInput/searchInput.module.scss
+++ b/src/routes/MakeTodo/SearchInput/searchInput.module.scss
@@ -5,6 +5,11 @@
   flex-direction: column;
   align-items: end;
   margin: 15px 30px;
+
+  @media screen and (max-width: 1050px) {
+    align-items: center;
+    margin: 15px 10px;
+  }
 }
 
 .searchForm {
