--- a/src/components/BoardCard/boardCard.module.scss
+++ b/src/components/BoardCard/boardCard.module.scss
@@ -28,18 +28,28 @@
     }
 
     .settingBox {
-      position: relative;
-      z-index: 50;
+      position: absolute;
+      z-index: 10;
       display: flex;
       flex-direction: column;
-      padding: 10px;
+      padding: 15px;
       background: colors.$WHITE;
       border: 1px solid black;
+
+      button {
+        transition: 0.1s linear;
+
+        &:hover {
+          color: colors.$LIGHTORANGE;
+        }
+      }
     }
   }
 }
 
 .category {
+  position: relative;
+  z-index: 1;
   display: flex;
 
   li {
