--- a/src/components/BoardCard/boardCard.module.scss
+++ b/src/components/BoardCard/boardCard.module.scss
@@ -5,8 +5,8 @@
   height: auto;
   padding: 10px;
   margin: 15px 0;
-  border: 1px solid black;
   border-radius: 10px;
+  box-shadow: 0 0 10px 2px colors.$GRAY_100;
 }
 
 .image {
@@ -20,6 +20,7 @@
   justify-content: space-between;
   width: 100%;
   margin: 5px 0;
+  color: colors.$FONT;
 
   .setting {
     .settingIcon {
@@ -37,6 +38,7 @@
       border: 1px solid black;
 
       button {
+        color: colors.$FONT;
         transition: 0.1s linear;
 
         &:hover {
@@ -75,6 +77,7 @@
   display: flex;
   align-items: center;
   width: 100%;
+  color: colors.$FONT;
 
   .dateIcon {
     width: 20px;
