Design: MakeTodo 페이지의 processBox 스타일 재설정

--- a/src/routes/MakeTodo/makeTodo.module.scss
+++ b/src/routes/MakeTodo/makeTodo.module.scss
@@ -24,7 +24,7 @@
   width: calc(calc(100vw - 300px) / 4);
   min-width: 240px;
   overflow-y: auto;
-  border: 1px solid black;
+  border-right: 1px solid colors.$GRAY_100;
 
   &::-webkit-scrollbar {
     display: block;
