Fix: searchInput 문제 수정
- input type을 search로 바꿔 x 버튼 생성

- submit 혹은 dropdown 요소 클릭시 input 안에 keyword 남아있고, dropdown
  닫히기

--- a/src/routes/MakeTodo/SearchInput/searchInput.module.scss
+++ b/src/routes/MakeTodo/SearchInput/searchInput.module.scss
@@ -38,12 +38,12 @@
   z-index: 50;
   width: 100%;
   height: auto;
-  padding: 10px 20px;
   margin-top: 5px;
   background: colors.$LIGHTPINK;
   border-radius: 10px;
 
   li {
+    margin: 10px 20px;
     margin-bottom: 10px;
 
     button {
