--- a/src/routes/MakeTodo/SearchInput/searchInput.module.scss
+++ b/src/routes/MakeTodo/SearchInput/searchInput.module.scss
@@ -31,6 +31,17 @@
   color: colors.$FONT;
   background: colors.$LIGHTPINK;
   border-radius: 15px;
+
+  &::-webkit-search-cancel-button {
+    display: none;
+  }
+}
+
+.xBtn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
 }
 
 .dropdownList {
