--- a/src/routes/MakeTodo/SearchInput/searchInput.module.scss
+++ b/src/routes/MakeTodo/SearchInput/searchInput.module.scss
@@ -24,6 +24,16 @@
   height: 15px;
 }
 
+.inputBackground {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 5;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0%);
+}
+
 .searchInput {
   width: 340px;
   height: 44px;
