--- a/src/routes/MakeTodo/makeTodo.module.scss
+++ b/src/routes/MakeTodo/makeTodo.module.scss
@@ -78,4 +78,13 @@
   }
 }
 
+.processInput {
+  width: 250px;
+  height: 50px;
+  padding-left: 10px;
+  color: colors.$FONT;
+  background: colors.$LIGHTPINK;
+  border-radius: 10px;
+}
+
 // 스크롤 가로 구현
