--- a/src/components/NavBar/navBar.module.scss
+++ b/src/components/NavBar/navBar.module.scss
@@ -1,5 +1,52 @@
+@use '../../styles/constants/colors';
+
 .navBar {
-  width: 250px;
+  width: 230px;
   height: 98vh;
-  border: 1px solid black;
+}
+
+.title {
+  width: 100%;
+  height: 140px;
+  padding: 60px 5px;
+  font-size: 23px;
+  font-weight: 600;
+  color: colors.$KEY;
+  text-align: center;
+  border-bottom: solid 1px colors.$GRAY_100;
+}
+
+.navList {
+  position: relative;
+  width: 100%;
+  margin-top: 50px;
+}
+
+.navItem {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  padding: 5px 15px 5px 20px;
+  margin: 0 0 35px;
+  font-weight: 600;
+
+  .navIcon {
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
+  }
+
+  div {
+    font-size: 16px;
+  }
+}
+
+.nonActivatedLink {
+  color: colors.$LIGHTPINK;
+  border: none;
+}
+
+.activatedLink {
+  color: colors.$KEY;
+  border-right: solid 3px colors.$LIGHTORANGE;
 }
