'Feat: boardCard의 setting 박스 열고 닫기 구현'
- setting 박스 열려있는 상태에서 background 를 누르면 setting 박스가 닫힘

--- a/src/components/BoardCard/boardCard.module.scss
+++ b/src/components/BoardCard/boardCard.module.scss
@@ -26,6 +26,18 @@
     .settingIcon {
       width: 20px;
       height: 20px;
+      cursor: pointer;
+    }
+
+    .settingBackground {
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: 5;
+      width: 100%;
+      height: 100%;
+      cursor: auto;
+      background: rgb(0, 0, 0, 0%);
     }
 
     .settingBox {
