--- a/src/components/BoardCard/boardCard.module.scss
+++ b/src/components/BoardCard/boardCard.module.scss
@@ -23,6 +23,8 @@
   color: colors.$FONT;
 
   .setting {
+    position: relative;
+
     .settingIcon {
       width: 20px;
       height: 20px;
@@ -42,6 +44,7 @@
 
     .settingBox {
       position: absolute;
+      left: -50px;
       z-index: 10;
       display: flex;
       flex-direction: column;
