--- a/src/components/BoardCard/boardCard.module.scss
+++ b/src/components/BoardCard/boardCard.module.scss
@@ -1,4 +1,5 @@
 @use '../../styles/constants/colors';
+@use '../../styles/base/fonts';
 
 .boardCard {
   width: calc(100% - 30px);
@@ -19,7 +20,10 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
-  margin: 5px 0;
+  margin: 10px 0 3px;
+  font-family: 'Nanum Gothic', sans-serif;
+  font-size: 15px;
+  font-weight: 800;
   color: colors.$FONT;
 
   .setting {
@@ -53,6 +57,7 @@
       border: 1px solid black;
 
       button {
+        font-family: 'Nanum Gothic', sans-serif;
         color: colors.$FONT;
         transition: 0.1s linear;
 
@@ -73,7 +78,9 @@
     width: auto;
     padding: 8px 10px;
     margin-right: 8px;
+    font-family: 'Nanum Gothic', sans-serif;
     font-size: 14px;
+    font-weight: 600;
     color: colors.$WHITE;
     background: colors.$KEY;
     border-radius: 5px;
@@ -83,6 +90,7 @@
 .description {
   width: 100%;
   margin: 10px 0;
+  font-family: 'Nanum Gothic', sans-serif;
   font-size: 13px;
   line-height: 25px;
   color: colors.$GRAY_300;
@@ -92,6 +100,8 @@
   display: flex;
   align-items: center;
   width: 100%;
+  font-size: 13px;
+  font-weight: 600;
   color: colors.$FONT;
 
   .dateIcon {
