--- a/src/routes/MakeTodo/SearchInput/searchInput.module.scss
+++ b/src/routes/MakeTodo/SearchInput/searchInput.module.scss
@@ -38,6 +38,7 @@
   width: 340px;
   height: 44px;
   padding-left: 35px;
+  font-family: 'Nanum Gothic', sans-serif;
   color: colors.$FONT;
   background: colors.$LIGHTPINK;
   border-radius: 15px;
@@ -70,7 +71,9 @@
     button {
       width: 100%;
       padding: 5px;
+      font-family: 'Nanum Gothic', sans-serif;
       font-size: 15px;
+      font-weight: 600;
       color: colors.$FONT;
       text-align: left;
       border-radius: 5px;
