Design: BoardCard 색상 흰 배경 주기(투명에서)

--- a/src/components/BoardCard/boardCard.module.scss
+++ b/src/components/BoardCard/boardCard.module.scss
@@ -6,6 +6,7 @@
   height: auto;
   padding: 10px;
   margin: 15px 0;
+  background: colors.$WHITE;
   border-radius: 10px;
   box-shadow: 0 0 10px 2px colors.$GRAY_100;
 }
