--- a/src/components/Modal/modal.module.scss
+++ b/src/components/Modal/modal.module.scss
@@ -1,10 +1,11 @@
 @use '../../styles/constants/colors';
+@use '../../styles/constants/levels';
 
 .background {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 90;
+  z-index: levels.$MODALBACK;
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 30%);
@@ -14,7 +15,7 @@
   position: fixed;
   top: 50%;
   left: 50%;
-  z-index: 100;
+  z-index: levels.$MODAL;
   width: 320px;
   height: 500px;
   padding: 10px 20px;
@@ -53,5 +54,3 @@
     background: colors.$KEY;
   }
 }
-
-// 알파벳 마다 다르게 태그 색상 설정
