Design: Navigation svg 색상 변경

--- a/src/components/NavBar/navBar.module.scss
+++ b/src/components/NavBar/navBar.module.scss
@@ -43,8 +43,10 @@
 
 .nonActivatedLink {
   color: colors.$LIGHTPINK;
+  fill: colors.$LIGHTPINK;
 }
 
 .activatedLink {
   color: colors.$KEY;
+  fill: colors.$KEY;
 }
