Design: Media-query로 input 창 스타일 변경

--- a/src/routes/MakeTodo/SearchInput/searchInput.module.scss
+++ b/src/routes/MakeTodo/SearchInput/searchInput.module.scss
@@ -15,6 +15,10 @@
 
 .searchForm {
   position: relative;
+
+  @media screen and (max-width: 1050px) {
+    width: 100%;
+  }
 }
 
 .searchIcon {
@@ -46,6 +50,10 @@
 
   &::-webkit-search-cancel-button {
     display: none;
+  }
+
+  @media screen and (max-width: 1050px) {
+    width: 100%;
   }
 }
 
