Feat: 네이게이션 바 수정

--- a/src/routes/routes.module.scss
+++ b/src/routes/routes.module.scss
@@ -4,4 +4,8 @@
   position: relative;
   z-index: levels.$BASIC;
   display: flex;
+
+  @media screen and (max-width: 768px) {
+    flex-direction: column;
+  }
 }
