--- a/src/styles/constants/_colors.scss
+++ b/src/styles/constants/_colors.scss
@@ -2,7 +2,7 @@
 $WHITE: #ffffff;
 $BLACK: #000000;
 
-$KEY: #ffb547;
+$KEY: #ff6006;
 $LIGHTORANGE: #fbc5a7;
 $LIGHTPINK: #fff1e9;
 $GRAY_100: #ebebeb;
