--- a/src/routes/DashBoard/dashBoard.module.scss
+++ b/src/routes/DashBoard/dashBoard.module.scss
@@ -3,28 +3,34 @@
 .header {
   display: flex;
   align-items: center;
+  margin: 15px 0 0 10px;
 
   .nickNameContainer {
     display: flex;
     align-items: center;
-    margin: 10px 15px 0 0;
+    margin-right: 25px;
 
     .nickNameForm {
       input {
-        width: 150px;
+        width: 170px;
       }
     }
 
     .nickName {
-      width: 190px;
-      font-size: 22px;
+      width: max-content;
+      font-size: 24px;
       color: colors.$KEY;
+      cursor: default;
     }
 
     .editIcon {
-      width: 25px;
-      height: 25px;
+      width: 20px;
+      height: 20px;
       cursor: pointer;
+
+      &:hover {
+        fill: colors.$KEY;
+      }
     }
   }
 }
