Config: input 관련 기본 스타일 수정

--- a/src/styles/base/_more.scss
+++ b/src/styles/base/_more.scss
@@ -37,7 +37,7 @@ textarea {
 
 input,
 button {
-  -webkit-appearance: none;
+  // -webkit-appearance: none;
 }
 
 input::-webkit-contacts-auto-fill-button {
