Feat: Modal component 폴더 정리

--- a/src/components/Modal/DashBoardModal/dashBoardModal.module.scss
+++ b/src/components/Modal/DashBoardModal/dashBoardModal.module.scss
@@ -1,5 +1,5 @@
-@use '../../styles/constants/colors';
-@use '../../styles/constants/levels';
+@use '../../../styles/constants/colors';
+@use '../../../styles/constants/levels';
 
 .background {
   position: fixed;
