--- a/src/routes/MakeTodo/Board/board.module.scss
+++ b/src/routes/MakeTodo/Board/board.module.scss
@@ -1,13 +1,24 @@
 @use '../../../styles/constants/colors';
 
-.processBox {
+@mixin icon {
+  justify-self: end;
+  width: 18px;
+  height: 18px;
+  cursor: pointer;
+  fill: colors.$KEY;
+}
+
+.boardBox {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: calc(calc(100vw - 270px) / 4);
-  min-width: 240px;
+  // max-width: calc(calc(100vw - 270px) / 4);
+  width: 340px;
+  // min-width: 240px;
+  height: 100%;
   overflow-x: hidden;
-  overflow-y: auto;
+  overflow-y: scroll;
   border-right: 1px solid colors.$GRAY_100;
 
   &::-webkit-scrollbar {
@@ -22,22 +33,25 @@
   }
 }
 
-.processTop {
-  display: flex;
+.boardTop {
+  display: grid;
+  grid-template-columns: 4fr 1fr 1fr;
   align-items: center;
-  justify-content: space-between;
-  width: calc(100% - 30px);
+  width: 300px;
   height: 40px;
   margin-top: 10px;
   font-size: 20px;
   font-weight: 500;
   color: colors.$FONT;
 
-  button {
-    padding: 10px 14px;
-    color: colors.$WHITE;
-    background: colors.$LIGHTORANGE;
-    border-radius: 10px;
+  .plus2Icon {
+    grid-column: 2 / 3;
+    @include icon;
+  }
+
+  .hamburgerIcon {
+    grid-column: 3 / 4;
+    @include icon;
   }
 }
 
