--- a/src/styles/base/_fonts.scss
+++ b/src/styles/base/_fonts.scss
@@ -1,14 +1,18 @@
+@use '../constants/colors';
+
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Jua&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Hahmlet:wght@100;200;300&display=swap');
 
 body,
 button,
 input,
 textarea {
-  font-family: Roboto, sans-serif, Arial;
+  font-family: Hahmlet, serif;
   font-feature-settings: 'tnum';
+  color: colors.$FONT;
 }
 
 input[type='number'] {
