--- a/src/routes/MakeTodo/Board/board.module.scss
+++ b/src/routes/MakeTodo/Board/board.module.scss
@@ -13,9 +13,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  // max-width: calc(calc(100vw - 270px) / 4);
   width: 340px;
-  // min-width: 240px;
   height: 100%;
   overflow-x: hidden;
   overflow-y: scroll;
@@ -55,6 +53,11 @@
   }
 }
 
-.noTaskMessage {
-  line-height: 100px;
+.cardList {
+  position: relative;
+  width: 300px;
+
+  .noTaskMessage {
+    line-height: 100px;
+  }
 }
