Design: modal background 공통 디자인 부분 mixin 설정

--- a/src/components/Modal/AddTaskModal/addTaskModal.module.scss
+++ b/src/components/Modal/AddTaskModal/addTaskModal.module.scss
@@ -1,14 +1,9 @@
 @use '../../../styles/constants/colors';
 @use '../../../styles/constants/levels';
+@use '../../../styles/mixins/modal';
 
 .background {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: levels.$MODALBACK;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 30%);
+  @include modal.modalBackground;
 }
 
 .modalContainer {
