--- a/src/components/Modal/NoticeModal/noticeModal.module.scss
+++ b/src/components/Modal/NoticeModal/noticeModal.module.scss
@@ -1,15 +1,10 @@
 @use '../../../styles/constants/colors';
 @use '../../../styles/constants/levels';
 @use '../../../styles/base/fonts';
+@use '../../../styles/mixins/modal';
 
 .background {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: levels.$MODALBACK;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 30%);
+  @include modal.modalBackground;
 }
 
 .modalBox {
@@ -47,14 +42,10 @@
 
     button {
       padding: 10px 20px;
-      border: 1px solid colors.$DARK_GRAY;
+      color: colors.$WHITE;
+      background: colors.$LIGHTORANGE;
       border-radius: 8px;
       transition: 0.1s linear;
-
-      &:hover {
-        color: colors.$WHITE;
-        background: colors.$DARK_GRAY;
-      }
     }
   }
 }
