--- a/src/components/Modal/AddBoardModal/addBoardModal.module.scss
+++ b/src/components/Modal/AddBoardModal/addBoardModal.module.scss
@@ -7,10 +7,7 @@
 }
 
 .modalBox {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  z-index: levels.$MODAL;
+  @include modal.modalBox;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -19,9 +16,7 @@
   height: 200px;
   padding: 10px 20px;
   font-size: 13px;
-  background: colors.$WHITE;
   border-radius: 8px;
-  transform: translate(-50%, -50%);
 
   input {
     padding: 5px 10px;
