--- a/src/components/Modal/AddTaskModal/addTaskModal.module.scss
+++ b/src/components/Modal/AddTaskModal/addTaskModal.module.scss
@@ -6,18 +6,13 @@
   @include modal.modalBackground;
 }
 
-.modalContainer {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  z-index: levels.$MODAL;
+.modalBox {
+  @include modal.modalBox;
   width: 320px;
   height: 500px;
   padding: 10px 20px;
   font-weight: 500;
-  background: colors.$WHITE;
   border-radius: 10px;
-  transform: translate(-50%, -50%);
 }
 
 .modalHead {
