--- a/src/styles/mixins/_modal.scss
+++ b/src/styles/mixins/_modal.scss
@@ -1,4 +1,5 @@
 @use '../constants/levels';
+@use '../constants/colors';
 
 @mixin modalBackground {
   position: fixed;
@@ -8,4 +9,13 @@
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 30%);
+}
+
+@mixin modalBox {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  z-index: levels.$MODAL;
+  background: colors.$WHITE;
+  transform: translate(-50%, -50%);
 }
