Fix: useState -> useRecoilState으로 Description component 리팩토링

--- a/src/components/Modal/AddTaskModal/addTaskModal.module.scss
+++ b/src/components/Modal/AddTaskModal/addTaskModal.module.scss
@@ -23,12 +23,16 @@
   font-size: 20px;
   color: colors.$FONT;
 
-  .xBtn {
+  .closeButton {
     cursor: pointer;
   }
 }
 
-.createBtn {
+.detail {
+  margin-top: 15px;
+}
+
+.createButton {
   position: absolute;
   bottom: 20px;
   width: 280px;
