Design: settingBox 공통 디자인 부분 mixin 추가 및 cardSettingBox 컴포넌트 디자인

--- a/src/components/BoardCard/CardSettingBox/cardSettingBox.module.scss
+++ b/src/components/BoardCard/CardSettingBox/cardSettingBox.module.scss
@@ -1,11 +1,11 @@
-@use '../../../../styles/constants/colors';
-@use '../../../../styles/mixins/settingBox';
+@use '../../../styles/constants/colors';
+@use '../../../styles/mixins/settingBox';
 
 .settingBox {
   @include settingBox.settingBox;
 
   button {
-    font-size: 14px;
+    font-size: 12px;
     transition: 0.2s;
 
     &:hover {
