--- a/src/components/BoardCard/CardSettingBox/cardSettingBox.module.scss
+++ b/src/components/BoardCard/CardSettingBox/cardSettingBox.module.scss
@@ -3,6 +3,16 @@
 
 .settingBox {
   @include settingBox.settingBox;
+  grid-template-rows: 1fr 1fr;
+  justify-items: center;
+  width: 80px;
+  height: 60px;
+  border: 1px solid colors.$GRAY_300;
+
+  @media screen and (max-width: 768px) {
+    grid-template-rows: 1fr 1fr 1fr;
+    height: 80px;
+  }
 
   button {
     font-size: 12px;
