--- a/src/routes/MakeTodo/BoardsContainer/boardsContainer.module.scss
+++ b/src/routes/MakeTodo/BoardsContainer/boardsContainer.module.scss
@@ -1,32 +1,61 @@
 @use '../../../styles/constants/colors';
 @use '../../../styles/constants/levels';
 
-.section {
-  display: flex;
-}
-
-.boards {
+.boardsContainer {
   position: relative;
-  z-index: levels.$BASIC;
   display: flex;
-  width: auto;
-  height: 875px;
-  margin: 0 0 0 5px;
-}
-
-.icons {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   width: 100%;
+  height: 100%;
+  overflow-x: scroll;
 
-  .addIcon {
-    width: 45px;
-    height: 45px;
+  &::-webkit-scrollbar {
+    display: block;
+    width: 10px;
+    height: 9px;
   }
 
-  .deleteIcon {
-    width: 30px;
-    height: 30px;
+  &::-webkit-scrollbar-thumb {
+    background-color: colors.$GRAY_300;
+    border-radius: 8px;
+  }
+
+  @media screen and (max-width: 768px) {
+    flex-direction: column;
+  }
+
+  .boards {
+    z-index: levels.$BASIC; // 필요 확인
+    display: flex;
+    width: auto;
+    height: 100%;
+    margin: 0 0 0 5px;
+  }
+
+  .containerSettingBox {
+    position: fixed;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    padding: 10px 0;
+    background: colors.$WHITE;
+    border-top: 1px solid colors.$GRAY_100;
+  }
+
+  .containerSettingButton {
+    padding: 10px 50px;
+    font-size: 14px;
+    background: colors.$GRAY_100;
+    border-radius: 8px;
+  }
+
+  .boardAddButton {
+    width: 200px;
+    height: 100px;
+    padding: 5px;
+    margin: 0 30px;
+    font-size: 12px;
+    border: 2px dotted colors.$GRAY_100;
+    border-radius: 8px;
   }
 }
