Design: boardCard 디자인
- tablet 화면 시 Card 위치 재설정
- Card category flex-wrap

--- a/src/components/BoardCard/boardCard.module.scss
+++ b/src/components/BoardCard/boardCard.module.scss
@@ -3,13 +3,26 @@
 @use '../../styles/constants/levels';
 
 .boardCard {
-  width: calc(100% - 30px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.movableCard {
+  width: 300px;
   height: auto;
   padding: 10px;
   margin: 15px 0;
+  font-family: 'Nanum Gothic', sans-serif;
   background: colors.$WHITE;
   border-radius: 10px;
   box-shadow: 0 0 10px 2px colors.$GRAY_100;
+
+  @media screen and (max-width: 768px) {
+    position: relative;
+    width: 100%;
+    max-width: 300px;
+  }
 }
 
 .image {
@@ -18,56 +31,18 @@
   object-fit: cover;
 }
 
-.titleBox {
+.boxHeader {
+  position: relative;
   display: flex;
   justify-content: space-between;
-  width: 100%;
   margin: 10px 0 3px;
-  font-family: 'Nanum Gothic', sans-serif;
   font-size: 15px;
   font-weight: 800;
-  color: colors.$FONT;
 
-  .setting {
-    position: relative;
-
-    .settingIcon {
-      width: 20px;
-      height: 20px;
-      cursor: pointer;
-    }
-
-    .settingBackground {
-      position: fixed;
-      top: 0;
-      left: 0;
-      z-index: levels.$MIDDLEBACK;
-      width: 100%;
-      height: 100%;
-      cursor: auto;
-      background: rgb(0, 0, 0, 0%);
-    }
-
-    .settingBox {
-      position: absolute;
-      left: -50px;
-      z-index: levels.$MIDDLE;
-      display: flex;
-      flex-direction: column;
-      padding: 15px;
-      background: colors.$WHITE;
-      border: 1px solid black;
-
-      button {
-        font-family: 'Nanum Gothic', sans-serif;
-        color: colors.$FONT;
-        transition: 0.1s linear;
-
-        &:hover {
-          color: colors.$LIGHTORANGE;
-        }
-      }
-    }
+  .settingIcon {
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
   }
 }
 
@@ -75,12 +50,12 @@
   position: relative;
   z-index: levels.$BASIC;
   display: flex;
+  flex-wrap: wrap;
 
   li {
     width: auto;
     padding: 8px 10px;
-    margin-right: 8px;
-    font-family: 'Nanum Gothic', sans-serif;
+    margin: 0 8px 8px 0;
     font-size: 14px;
     font-weight: 600;
     color: colors.$WHITE;
@@ -90,9 +65,7 @@
 }
 
 .description {
-  width: 100%;
-  margin: 10px 0;
-  font-family: 'Nanum Gothic', sans-serif;
+  margin-bottom: 10px;
   font-size: 13px;
   line-height: 25px;
   color: colors.$GRAY_300;
@@ -101,10 +74,9 @@
 .dates {
   display: flex;
   align-items: center;
-  width: 100%;
+  font-family: Hahmlet, serif;
   font-size: 13px;
   font-weight: 600;
-  color: colors.$FONT;
 
   .dateIcon {
     width: 20px;
