--- a/src/components/Modal/MoveCardModal/moveCardModal.module.scss
+++ b/src/components/Modal/MoveCardModal/moveCardModal.module.scss
@@ -12,6 +12,23 @@
   justify-content: space-around;
   width: 300px;
   height: auto;
-  padding: 10px 20px;
+  padding: 20px;
   border-radius: 8px;
+
+  .xIcon {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+  }
+
+  p {
+    margin-bottom: 20px;
+  }
+
+  button {
+    padding: 8px;
+  }
 }
