--- a/src/components/Modal/components/Picture/picture.module.scss
+++ b/src/components/Modal/components/Picture/picture.module.scss
@@ -1,7 +1,7 @@
 @use '../../../../styles/constants/colors';
 
 .image {
-  margin-top: 10px;
+  margin: 10px 0 80px;
   color: colors.$FONT;
 
   .imageLabel {
