Design: KEY, LIGHTORANGE, LIGHTPINK 색상 변경

--- a/src/styles/constants/_colors.scss
+++ b/src/styles/constants/_colors.scss
@@ -3,9 +3,10 @@ $WHITE: #ffffff;
 $BLACK: #000000;
 $DARK_GRAY: #292c2d;
 
-$KEY: #ff6006;
-$LIGHTORANGE: #fbc5a7;
-$LIGHTPINK: #fff1e9;
+$KEY: #f9a87a;
+$LIGHTORANGE: #c7a18c;
+// $LIGHTPINK: #f6eae4;
+$LIGHTPINK: #f6ede7;
 $GRAY_100: #ebebeb;
 $GRAY_300: #b3b2b2;
 $ERROR: #e31a1a;
