--- a/src/routes/MakeTodo/Board/board.module.scss
+++ b/src/routes/MakeTodo/Board/board.module.scss
@@ -12,7 +12,7 @@
   display: flex;
   flex-direction: column;
   width: 340px;
-  height: inherit;
+  height: 100%;
   border-right: 1px solid colors.$GRAY_100;
 
   @media screen and (max-width: 768px) {
@@ -85,8 +85,6 @@
   background: colors.$WHITE;
 
   @media screen and (max-width: 768px) {
-    bottom: 0;
-    z-index: 5;
     display: flex;
     justify-content: center;
     height: 60px;
@@ -97,6 +95,6 @@
 .boardSettingButton {
   padding: 10px 70px;
   font-size: 14px;
-  background: colors.$GRAY_100;
+  background: colors.$LIGHTPINK;
   border-radius: 8px;
 }
