--- a/src/routes/TaskDashBoard/BoardsContainer/Board/BoardCard/boardCard.module.scss
+++ b/src/routes/TaskDashBoard/BoardsContainer/Board/BoardCard/boardCard.module.scss
@@ -1,6 +1,6 @@
-@use '../../styles/constants/colors';
-@use '../../styles/base/fonts';
-@use '../../styles/constants/levels';
+@use '../../../../../styles/constants/colors';
+@use '../../../../../styles/base/fonts';
+@use '../../../../../styles/constants/levels';
 
 .boardCard {
   display: flex;
