--- a/src/routes/TaskDashBoard/BoardsContainer/boardsContainer.module.scss
+++ b/src/routes/TaskDashBoard/BoardsContainer/boardsContainer.module.scss
@@ -26,7 +26,7 @@
     position: relative;
     display: flex;
     width: auto;
-    height: inherit;
+    height: 100%;
   }
 
   .boardAddButton {
