Design: 모바일용 디자인 수정

--- a/src/routes/TaskDashBoard/BoardsContainer/Board/BoardCard/boardCard.module.scss
+++ b/src/routes/TaskDashBoard/BoardsContainer/Board/BoardCard/boardCard.module.scss
@@ -21,7 +21,8 @@
   @media screen and (max-width: 768px) {
     position: relative;
     width: 100%;
-    max-width: 300px;
+    margin: 5px;
+    border-radius: 3px;
   }
 }
 
@@ -60,6 +61,11 @@
     color: colors.$WHITE;
     background: colors.$KEY;
     border-radius: 5px;
+
+    @media screen and (max-width: 768px) {
+      padding: 5px 8px;
+      border-radius: 3px;
+    }
   }
 }
 
