--- a/src/routes/TaskDashBoard/BoardsContainer/Board/board.module.scss
+++ b/src/routes/TaskDashBoard/BoardsContainer/Board/board.module.scss
@@ -85,6 +85,8 @@
   background: colors.$WHITE;
 
   @media screen and (max-width: 768px) {
+    position: fixed;
+    bottom: 0;
     display: flex;
     justify-content: center;
     height: 60px;
