Design: lightOrange, lightPink 색상 변경

--- a/src/styles/constants/_colors.scss
+++ b/src/styles/constants/_colors.scss
@@ -4,8 +4,8 @@ $BLACK: #000000;
 $DARK_GRAY: #292c2d;
 
 $KEY: #f9a87a;
-$LIGHTORANGE: #c7a18c;
-$LIGHTPINK: #f6ede7;
+$LIGHTORANGE: #fbd3bb;
+$LIGHTPINK: #fff2ea;
 $GRAY_100: #ebebeb;
 $GRAY_300: #b3b2b2;
 $ERROR: #e31a1a;
