--- a/src/routes/TaskDashBoard/BoardsContainer/boardsContainer.module.scss
+++ b/src/routes/TaskDashBoard/BoardsContainer/boardsContainer.module.scss
@@ -6,7 +6,7 @@
   display: flex;
   width: auto;
   height: 100%;
-  overflow-y: auto;
+  overflow-y: hidden;
 
   &::-webkit-scrollbar {
     display: block;
